--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>CodePen - Blog Cards</title>
+  <title>Sergio Ledezma - Blog - </title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,700" rel="stylesheet">
 <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.4.0/css/font-awesome.min.css'><link rel="stylesheet" href="./style.css">
@@ -14,24 +14,21 @@
     <div class="meta">
       <div class="photo" style="background-image: url(https://storage.googleapis.com/chydlx/codepen/blog-cards/image-1.jpg)"></div>
       <ul class="details">
-        <li class="author"><a href="#">John Doe</a></li>
-        <li class="date">Aug. 24, 2015</li>
+        <li class="author"><a href="#"></a></li>
+        <li class="date">5-4-21</li>
         <li class="tags">
           <ul>
-            <li><a href="#">Learn</a></li>
-            <li><a href="#">Code</a></li>
-            <li><a href="#">HTML</a></li>
-            <li><a href="#">CSS</a></li>
-          </ul>
+            <li><a href="#">CISCO</a></li>
+            </ul>
         </li>
       </ul>
     </div>
     <div class="description">
-      <h1>Learning to Code</h1>
-      <h2>Opening a door to the future</h2>
-      <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad eum dolorum architecto obcaecati enim dicta praesentium, quam nobis! Neque ad aliquam facilis numquam. Veritatis, sit.</p>
+      <h1>Guía de estudio para la certificación</h1>
+      <h2>CCNA 200-301</h2>
+      <p> Adjunto una guia para la certificacion de Cisco 200-301 que me encontre por ahi!.</p>
       <p class="read-more">
-        <a href="#">Read More</a>
+        <a href="#">Ver Guia</a>
       </p>
     </div>
   </div>
