--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <h2>CCNA 200-301</h2>
       <p> Adjunto una guia para la certificacion de Cisco 200-301 que me encontre por ahi!.</p>
       <p class="read-more">
-        <a href="#">Ver Guia</a>
+        <a href="https://github.com/sergioledezmac/sergioledezmac.github.io/blob/main/Redes%20Cisco%202020%20.pdf">Ver Guia</a>
       </p>
     </div>
   </div>
