--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <!-- partial:index.partial.html -->
 <div class="blog-card">
     <div class="meta">
-      <div class="photo" style="background-image: url(https://storage.googleapis.com/chydlx/codepen/blog-cards/image-1.jpg)"></div>
+      <div class="photo" style="background-image: url(https://raw.githubusercontent.com/sergioledezmac/sergioledezmac.github.io/main/Guia200-301.png)"></div>
       <ul class="details">
         <li class="author"><a href="#"></a></li>
         <li class="date">5-4-21</li>
@@ -28,7 +28,7 @@
       <h2>CCNA 200-301</h2>
       <p> Adjunto una guia para la certificacion de Cisco 200-301 que me encontre por ahi!.</p>
       <p class="read-more">
-        <a href="https://github.com/sergioledezmac/sergioledezmac.github.io/blob/main/Redes%20Cisco%202020%20.pdf">Ver Guia</a>
+        <a href="https://raw.githubusercontent.com/sergioledezmac/sergioledezmac.github.io/main/Redes%20Cisco%202020%20.pdf">Ver Guia</a>
       </p>
     </div>
   </div>
