--- a/index.html
+++ b/index.html
@@ -34,54 +34,30 @@
   </div>
   <div class="blog-card alt">
     <div class="meta">
-      <div class="photo" style="background-image: url(https://storage.googleapis.com/chydlx/codepen/blog-cards/image-2.jpg)"></div>
+      <div class="photo" style="background-image: url(https://raw.githubusercontent.com/sergioledezmac/sergioledezmac.github.io/main/vcp.jpg)"></div>
       <ul class="details">
-        <li class="author"><a href="#">Jane Doe</a></li>
-        <li class="date">July. 15, 2015</li>
+        <li class="author"><a href="#"></a></li>
+        <li class="date">5-4-21</li>
         <li class="tags">
           <ul>
-            <li><a href="#">Learn</a></li>
-            <li><a href="#">Code</a></li>
-            <li><a href="#">JavaScript</a></li>
+            <li><a href="#">VmWare</a></li>
+           
           </ul>
         </li>
       </ul>
     </div>
     <div class="description">
-      <h1>Mastering the Language</h1>
-      <h2>Java is not the same as JavaScript</h2>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad eum dolorum architecto obcaecati enim dicta praesentium, quam nobis! Neque ad aliquam facilis numquam. Veritatis, sit.</p>
+      <h1>Guía de estudio VMware vSphere 7</h1>
+      <h2>VCP 2020/2021 v7 Edition</h2>
+      <p>Una guia muy completa en Ingles para el VCP, aunque dice 2020 funciona perfectamente para el VCP 2021.</p>
       <p class="read-more">
-        <a href="#">Read More</a>
+        <a href="https://raw.githubusercontent.com/sergioledezmac/sergioledezmac.github.io/main/VCP-2020-v7-Study-Guide.pdf">Ver Guia</a>
       </p>
     </div>
   </div>
 <!-- partial -->
   
-  <div class="blog-card alt">
-    <div class="meta">
-      <div class="photo" style="background-image: url(https://storage.googleapis.com/chydlx/codepen/blog-cards/image-2.jpg)"></div>
-      <ul class="details">
-        <li class="author"><a href="#">Jane Doe</a></li>
-        <li class="date">July. 15, 2015</li>
-        <li class="tags">
-          <ul>
-            <li><a href="#">Learn</a></li>
-            <li><a href="#">Code</a></li>
-            <li><a href="#">JavaScript</a></li>
-          </ul>
-        </li>
-      </ul>
-    </div>
-    <div class="description">
-      <h1>Mastering the Language</h1>
-      <h2>Java is not the same as JavaScript</h2>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad eum dolorum architecto obcaecati enim dicta praesentium, quam nobis! Neque ad aliquam facilis numquam. Veritatis, sit.</p>
-      <p class="read-more">
-        <a href="#">Read More</a>
-      </p>
-    </div>
-  </div>
+  
   
 </body>
 </html>
