--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
   <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,700" rel="stylesheet">
 <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.4.0/css/font-awesome.min.css'><link rel="stylesheet" href="./style.css">
 
+  <font align="center" face="Arial" size="5" color="#FFFFF">ϟergio Ledezma</font>
 </head>
 <body>
 <!-- partial:index.partial.html -->
-  <h1>ϟergio Ledezma</h1>
+  
 <div class="blog-card">
     <div class="meta">
       <div class="photo" style="background-image: url(https://raw.githubusercontent.com/sergioledezmac/sergioledezmac.github.io/main/Guia200-301.png)"></div>
