--- a/index.html
+++ b/index.html
@@ -7,7 +7,17 @@
   <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,700" rel="stylesheet">
 <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.4.0/css/font-awesome.min.css'><link rel="stylesheet" href="./style.css">
 
-  <font align="center" face="Arial" size="5" color="#FFFFF">ϟergio Ledezma</font>
+  <style>
+.center {
+  margin: auto;
+  width: 50%;
+    padding: 10px;
+}
+</style>
+<div class="center">
+<font div="center" face="Arial" size="5" color="#FFFFF">ϟergio Ledezma</font>
+</div>
+  
 </head>
 <body>
 <!-- partial:index.partial.html -->
