--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
     <meta property="og:type" content="website">
   </head>
   <body data-home-page="Home.html" data-home-page-title="Home" class="u-body"><header class="u-clearfix u-header u-palette-5-base u-header" id="sec-bbeb"><div class="u-clearfix u-sheet u-sheet-1">
-        <h3 class="u-custom-font u-font-pt-sans u-text u-text-body-alt-color u-text-1">sergioledezma.com</h3>
+        <h3 class="u-custom-font u-font-pt-sans u-text u-text-body-alt-color u-text-1">ϟ℮яℊїø</h3>
         <div class="u-social-icons u-spacing-10 u-social-icons-1"></div>
       </div></header> 
     <section class="u-align-center u-clearfix u-section-1" id="sec-c72f">
