--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@
 
     <footer class="main-footer" id="contact">
         <div class="container">
-            <p>© 2024 LuLu – Linux Unified Logic Utility. Todos los derechos reservados.</p>
+            <p> 2025 LuLu – Linux Unified Logic Utility. Sergio Ledezma.</p>
         </div>
     </footer>
 
