--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
             <div class="container">
                 <h1>LuLu – Linux Unified Logic Utility</h1>
                 <p class="subtitle">Automatiza el 100% de los procesos en Linux.</p>
-                <a href="#" class="cta-button">Ver Solución</a>
+                <a href="https://sergioledezma.com/working.html" class="cta-button">Ver Solución</a>
             </div>
         </section>
 
